--- a/index.html
+++ b/index.html
@@ -12,94 +12,84 @@
 <body>
     <main id="main">
         <header>
-            <h1 id=title>Dr. Norman Borlaug</h1>
-            <p id="title1">The man who saved a billion lives</p>
+            <h1 id=title>Tribute to Elon Musk</h1>
+            <p id="title1">Elon Reeve Musk FRS is an engineer, industrial designer, technology entrepreneur and
+                philanthropist.</p>
         </header>
         <figure id="img-div">
-            <img id="image" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg"
-                alt="Dr. Norman Borlaug seen standing in Mexican wheat field with a group of biologists"></img>
-            <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how
-                to
-                increase wheat yields - part of his life-long war on hunger.</figcaption>
+            <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/e/ed/Elon_Musk_Royal_Society.jpg"
+                alt="Elon Musk attending a conference"></img>
+            <figcaption id="img-caption">Musk at the Royal Society admissions day in London, July 2018</figcaption>
         </figure>
         <section id="tribute-info">
-            <h3>Here's a time line of Dr. Borlaug's life:</h3>
+            <h3>Here's a time line of Elon Musk's life:</h3>
             <ul>
                 <li>
-                    <strong>1914</strong>
-                    - Born in Cresco, Iowa
+                    <strong>June 28, 1971</strong>
+                    - Born in Pretoria, Transvaal, South Africa
                 </li>
                 <li>
-                    <strong>1933</strong>
-                    - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era
-                    program known as the "National Youth Administration"
+                    when he was 10, Musk developed an interest in computers. He taught himself how to program.
                 </li>
                 <li>
-                    <strong>1935</strong>
-                    - Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping
-                    starving Americans. "I saw how food changed them", he said. "All of this left scars on me."
+                    When he was 12 he sold his first software: a game he created called Blastar.
                 </li>
                 <li>
-                    <strong>1937</strong>
-                    - Finishes university and takes a job in the US Forestry Service
+                    He grew up in South Africa, then immigrated to Canada at age 17. He landed in the U.S. as a transfer
+                    student to the University of Pennsylvania.
                 </li>
                 <li>
-                    <strong>1938</strong>
-                    - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin
-                    Charles Stakman, he returns to school study under Stakman, who teaches him about breeding
-                    pest-resistent
-                    plants.
+                    Musk launched his first company, Zip2 Corporation, in 1995 with his brother, Kimbal Musk. An online
+                    city guide, Zip2 was soon providing content for the new websites of both The New York Times and the
+                    Chicago Tribune.
                 </li>
                 <li>
-                    <strong>1941</strong>
-                    - Tries to enroll in the military after the Pearl Harbor attack, but is rejected. Instead, the
-                    military asked his lab to work on waterproof glue, DDT to control malaria, disinfectants, and
-                    other
-                    applied science.
+                    In 1999, Elon and Kimbal Musk used the money from their sale of Zip2 to found X.com, an online
+                    financial services/payments company. An X.com acquisition the following year led to the creation of
+                    PayPal as it is known today
                 </li>
                 <li>
-                    <strong>1942</strong>
-                    - Receives a Ph.D. in Genetics and Plant Pathology
+                    In October 2002, Musk earned his first billion when PayPal was acquired by eBay for $1.5 billion in
+                    stock. Before the sale, Musk owned 11 percent of PayPal stock.
                 </li>
                 <li>
-                    <strong>1944</strong>
-                    - Rejects a 100% salary increase from Dupont, leaves behind his pregnant wife, and flies to
-                    Mexico
-                    to head a new plant pathology program. Over the next 16 years, his team breeds 6,000 different
-                    strains
-                    of disease resistent wheat - including different varieties for each major climate on Earth.
+                    Musk founded his third company, Space Exploration Technologies Corporation, or SpaceX, in 2002 with
+                    the intention of building spacecraft for commercial space travel. By 2008, SpaceX was well
+                    established, and NASA awarded the company the contract to handle cargo transport for the
+                    International Space Station.
                 </li>
                 <li>
-                    <strong>1945</strong>
-                    - Discovers a way to grown wheat twice each season, doubling wheat yields
+                    On May 22, 2012, Musk and SpaceX made history when the company launched its Falcon 9 rocket into
+                    space with an unmanned capsule. The vehicle was sent to the International Space Station with 1,000
+                    pounds of supplies for the astronauts stationed there, marking the first time a private company had
+                    sent a spacecraft to the International Space Station.
                 </li>
                 <li>
-                    <strong>1953</strong>
-                    crosses a short, sturdy dwarf breed of wheat with a high-yeidling American breed, creating a
-                    strain that responds well to fertilizer. It goes on to provide 95% of Mexico's wheat.
+                    He owns 21% of Tesla but has pledged more than half his stake as collateral for loans; Forbes has
+                    discounted his stake to take the loans into account.
                 </li>
-                <li><strong>2005</strong>
-                    - states "we will have to double the world food supply by 2050." Argues that genetically
-                    modified
-                    crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops
-                    are not
-                    inherently dangerous because "we've been genetically modifying plants and animals for a long
-                    time. Long
-                    before we called it science, people were selecting the best breeds."</li>
-                <li><strong>2009</strong> - dies at the age of 95.</li>
+                <li>
+                    He settled with the SEC in September 2018 for making alleged "false statements" about a plan to take
+                    Tesla private, and had to step down as chairman.
+                </li>
+                <li>
+                    Elon Musk is working to revolutionize transportation both on Earth, through electric car maker Tesla
+                    - and in space, via rocket producer SpaceX.
+                </li>
+
             </ul>
             <blockquote
-                cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm">
+                cite="https://nypost.com/2020/01/22/trump-praises-tesla-founder-elon-musk-compares-him-to-thomas-edison/">
                 <p>
-                    "Borlaug's life and achievement are testimony to the far-reaching contribution that one man's
-                    towering
-                    intellect, persistence and scientific vision can make to human peace and progress."</p>
-                <cite>-- Indian Prime Minister Manmohan Singh</cite>
+                    “He’s one of our great geniuses, and we have to protect our genius,” Trump said of Musk in a CNBC
+                    interview. “You know, we have to protect Thomas Edison and we have to protect all of these people
+                    that came up with, originally, the light bulb and the wheel and all of these things.”</p>
+                <cite>-- President Donald Trump</cite>
             </blockquote>
             <h3>If you have time, you should read more about this incredible human being on his
-                <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target=_blank>Wikipedia
+                <a id="tribute-link" href="https://en.wikipedia.org/wiki/Elon_Musk" target=_blank>Wikipedia
                     entry
-            </h3>.
+            </h3>
         </section>
     </main>
 </body>
