Updated some layout

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </li>
 
             </ul>
-            <blockquote
+            <blockquote id="quote"
                 cite="https://nypost.com/2020/01/22/trump-praises-tesla-founder-elon-musk-compares-him-to-thomas-edison/">
                 <p>
                     “He’s one of our great geniuses, and we have to protect our genius,” Trump said of Musk in a CNBC
